# weather-prediction-project

./: LICENSE  MANIFEST.in  Makefile  README.md  assignment-requirements.md  pyproject.toml  requirements.txt
data/processed/: X_test_exp_1.csv  X_test_exp_2.csv  X_test_exp_3.csv  X_test_exp_4.csv  X_train_exp_2.csv  X_train_exp_4.csv  X_val_exp_1.csv  X_val_exp_2.csv  X_val_exp_3.csv  X_val_exp_4.csv  y_test_exp_1.csv  y_test_exp_3.csv  y_train_exp_2.csv  y_train_exp_3.csv  y_val_exp_2.csv  y_val_exp_3.csv
data/raw/: data_info.txt  sydney_weather_daily.csv
models/precipitation_fall/: precipitation_lightgbm.txt  precipitation_lightgbm_info.json  precipitation_linear_regression.pkl  precipitation_linear_regression_info.json  precipitation_linear_regression_preprocessor.pkl
models/rain_or_not/: rain_or_not_lightgbm.txt  rain_or_not_lightgbm_info.json  rain_or_not_logistic_regression.pkl  rain_or_not_logistic_regression_info.json  rain_or_not_logistic_regression_preprocessor.pkl
notebooks/precipitation_fall/: 36120-25SP-25605217-experiment-3.ipynb  36120-25SP-25605217-experiment-4.ipynb
notebooks/rain_or_not/: 36120-25SP-25605217-experiment-1.ipynb  36120-25SP-25605217-experiment-2.ipynb  36120-25SP-AT2-student_id-experiment.ipynb
reports/exp_1/: output.txt
reports/exp_2/: output.txt
reports/exp_3/: output.txt
reports/exp_4/: output.txt
weather/: __init__.py  dataset.py  features.py  plots.py
weather/modeling/: __init__.py  predict.py  train.py
