[tool.poetry]
name = "weather"
version = "0.1.0"
description = "Weather prediction package for Sydney rainfall and precipitation forecasting"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/weather-prediction"
keywords = ["weather", "prediction", "machine-learning", "rainfall", "precipitation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
requests = "^2.31.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
python-dateutil = "^2.8.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.0"
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
twine = "^4.0.0"
build = "^1.0.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["TestCase", "Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]